Convert to static website with JSON editor

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{"version": 2, "builds": [{"src": "app.py", "use": "@vercel/python"}], "routes": [{"src": "/static/(.*)", "dest": "/static/$1"}, {"src": "/(.*)", "dest": "app.py"}]}
+{"version": 2, "builds": [{"src": "index.html", "use": "@vercel/static"}], "routes": [{"src": "/data.json", "headers": {"Access-Control-Allow-Origin": "*", "Cache-Control": "public, max-age=3600"}}]}
